--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,5 +1,6 @@
 /* Abstracts */
 @import "./abstracts/variables";
+@import "./abstracts/mixins";
 
 /* Base */
 @import "./base/reset";
@@ -18,155 +19,3 @@
 @import "./pages/servicios";
 @import "./pages/sobrenosotros";
 @import "./pages/contacto";
-
-/* Media Querys */
-/* TABLET */
-@media screen and (max-width: 991px) {
-
-    /* CSS Global */
-    .navbar {
-        min-height: 10vh;
-    }
-
-    .navbar-expand-lg .navbar-nav .nav-link {
-        padding: .8rem 1.2rem;
-    }
-
-    .nav-active {
-        border-bottom: 4px solid #FBCA04;
-    }
-
-    .logo-inicio {
-        max-width: 10vh;
-    }
-
-    /* index */
-    .index-seccion-2 {
-        padding: 5vh 0;
-    }
-
-    .index-parrafos-top {
-        font-size: 1rem;
-        margin: 0 3vh 2vh 3vh;
-    }
-
-    .index-parrafos {
-        font-size: 1rem;
-        margin: 0 3vh 2vh 3vh;
-    }
-
-    /* Articulo 1 */
-    .index-articulo-1 {
-        flex-flow: column wrap;
-
-        .div-parrafos {
-            width: 100%;
-        }
-
-        .index-div-img-1 {
-            width: 100%;
-            margin: 0;
-            padding: 2vh;
-        }
-    }
-
-    /* Articulo 2 */
-    .index-articulo-2 {
-        flex-flow: column-reverse wrap;
-        padding-top: 2vh;
-
-        .div-parrafos {
-            width: 100%;
-        }
-
-        .index-div-img-2 {
-            width: 100%;
-            margin: 0;
-            padding: 2vh;
-        }
-    }
-
-    /* PRODUCTOS */
-
-    /* CONTACTO */
-    .contacto__seccion {
-        flex-direction: column;
-    }
-
-    .contacto-img {
-        height: 100%;
-        width: 90%;
-        margin: 5vh 0;
-    }
-
-    .form {
-        margin-bottom: 5vh;
-        width: 90%;
-    }
-}
-
-/* TODO: MOVIL */
-@media screen and (max-width: 425px) {
-
-    .asides {
-        display: none;
-    }
-
-    .grid-all {
-        grid-template-areas:
-            "header header"
-            "main main"
-            "footer footer";
-        grid-template-columns: 50% 50%;
-        grid-template-rows: auto auto auto;
-    }
-
-    /* index */
-    .index-seccion-2 {
-        padding: 2vh 0;
-    }
-
-    .index-parrafos-top {
-        font-size: 1rem;
-        margin: 0 2vh 2vh 2vh;
-    }
-
-    .index-parrafos {
-        font-size: 1rem;
-        margin: 0 2vh 2vh 2vh;
-    }
-
-    /* PRODUCTOS */
-    .productos-frase-productos {
-        margin: 5vh 5vh 5vh 5vh;
-        background: rgb(255, 235, 136);
-        background: linear-gradient(180deg, rgba(255, 235, 136, 1) 0%, rgba(255, 255, 255, 1) 40%);
-    }
-
-    .productos-contain-imgs img {
-        width: 150px;
-        height: 150px;
-    }
-
-    /* SERVICIO */
-    .card-group {
-        margin: 5vh 3vh;
-    }
-
-    /* Footer */
-    footer {
-        background: rgb(234, 29, 36);
-        background: linear-gradient(90deg, rgba(234, 29, 36, 1) 5%, rgba(3, 68, 148, 1) 10%, rgba(3, 68, 148, 1) 90%, rgba(234, 29, 36, 1) 95%);
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .footer-icons a {
-        margin: 4vh 5vh 2vh 5vh;
-    }
-
-    .footer-copyright {
-        margin: 0;
-        padding: 5vh 4vh 5vh 4vh;
-    }
-}
