--- a/styles/scss/layout/_grid.scss
+++ b/styles/scss/layout/_grid.scss
@@ -36,3 +36,20 @@
 .grid-footer {
     grid-area: footer;
 }
+
+/* Móvil */
+@media screen and (max-width: 425px) {
+
+    .asides {
+        display: none;
+    }
+
+    .grid-all {
+        grid-template-areas:
+            "header header"
+            "main main"
+            "footer footer";
+        grid-template-columns: 50% 50%;
+        grid-template-rows: auto auto auto;
+    }
+}
