--- a/styles/scss/pages/_contacto.scss
+++ b/styles/scss/pages/_contacto.scss
@@ -13,9 +13,7 @@
     box-shadow: $box-shadow-imgs;
 
     img {
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
+        @include img-cover-wh-100;
     }
 }
 
@@ -49,7 +47,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 2vh;
+        padding: 1vh;
     }
 }
 
@@ -61,4 +59,33 @@
     display: flex;
     justify-content: space-evenly;
     margin: 2vh 0;
+}
+
+/* TABLET */
+@media screen and (max-width: 991px) {
+
+    /* CONTACTO */
+    .contacto__seccion {
+        flex-direction: column;
+    }
+
+    .contacto-img {
+        height: 100%;
+        width: 90%;
+        margin: 5vh 0;
+    }
+
+    .form {
+        margin-bottom: 5vh;
+        width: 90%;
+        height: 100%;
+
+        &-casillas {
+            padding: 1vh;
+        }
+
+        &-legend {
+            padding: 1vh 0;
+        }
+    }
 }
