--- a/styles/scss/pages/_index.scss
+++ b/styles/scss/pages/_index.scss
@@ -54,10 +54,12 @@
         width: 40%;
         margin: 0 5vh;
 
+        &:hover {
+            transform: scale(1.05, 1.05);
+        }
+
         img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            @include img-cover-wh-100;
             box-shadow: $box-shadow-imgs;
         }
     }
@@ -82,9 +84,7 @@
         margin: 0 5vh;
 
         img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+            @include img-cover-wh-100;
             box-shadow: $box-shadow-imgs;
         }
     }
@@ -104,6 +104,8 @@
 }
 
 .index-siguenos {
+    text-decoration: none;
+
     &:link {
         color: #1765ca;
     }
@@ -116,4 +118,73 @@
 /* Iframe */
 .google-maps iframe {
     width: 100%;
+}
+
+/* TABLET */
+@media screen and (max-width: 991px) {
+
+    /* index */
+    .index-seccion-2 {
+        padding: 5vh 0;
+    }
+
+    .index-parrafos-top {
+        font-size: 1rem;
+        margin: 0 3vh 2vh 3vh;
+    }
+
+    .index-parrafos {
+        font-size: 1rem;
+        margin: 0 3vh 2vh 3vh;
+    }
+
+    /* Articulo 1 */
+    .index-articulo-1 {
+        flex-flow: column wrap;
+
+        .div-parrafos {
+            width: 100%;
+        }
+
+        .index-div-img-1 {
+            width: 100%;
+            margin: 0;
+            padding: 2vh;
+        }
+    }
+
+    /* Articulo 2 */
+    .index-articulo-2 {
+        flex-flow: column-reverse wrap;
+        padding-top: 2vh;
+
+        .div-parrafos {
+            width: 100%;
+        }
+
+        .index-div-img-2 {
+            width: 100%;
+            margin: 0;
+            padding: 2vh;
+        }
+    }
+}
+
+/* MÓVIL */
+@media screen and (max-width: 425px) {
+
+    /* index */
+    .index-seccion-2 {
+        padding: 2vh 0;
+    }
+
+    .index-parrafos-top {
+        font-size: 1rem;
+        margin: 0 2vh 2vh 2vh;
+    }
+
+    .index-parrafos {
+        font-size: 1rem;
+        margin: 0 2vh 2vh 2vh;
+    }
 }
