Devuelvo los cambios porque me equivoque xd

--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -245,7 +245,7 @@ body {
 /* Pages */
 /* Index */
 .seccion-principal {
-  background-image: url(../../imgs/puerta-local-lejos-3.jpeg);
+  background-image: url(../../../imgs/puerta-local.jpeg);
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
