--- a/styles/scss/pages/_index.scss
+++ b/styles/scss/pages/_index.scss
@@ -1,6 +1,6 @@
 /* Index */
 .seccion-principal {
-    background-image: url(../../imgs/puerta-local-lejos-3.jpeg);
+    background-image: url(../../../imgs/puerta-local.jpeg);
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
