--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -164,7 +164,7 @@ body {
 
 .asides {
   background: rgb(234, 29, 36);
-  background: linear-gradient(0deg, rgb(234, 29, 36) 30%, rgb(3, 68, 148) 70%);
+  background: linear-gradient(180deg, rgb(3, 68, 148) 20%, rgb(234, 29, 36) 50%, rgb(3, 68, 148) 80%);
   z-index: 10;
 }
 
@@ -173,7 +173,7 @@ body {
 }
 
 /* Móvil */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
   .asides {
     display: none;
   }
@@ -185,8 +185,7 @@ body {
 }
 /* Footer */
 .footer {
-  background: rgb(234, 29, 36);
-  background: linear-gradient(90deg, rgb(234, 29, 36) 5%, rgb(3, 68, 148) 10%, rgb(3, 68, 148) 90%, rgb(234, 29, 36) 95%);
+  background-color: #034494;
   color: #fff;
   display: flex;
   justify-content: space-evenly;
@@ -226,11 +225,9 @@ body {
 }
 
 /* MOVIL */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
   /* Footer */
   footer {
-    background: rgb(234, 29, 36);
-    background: linear-gradient(90deg, rgb(234, 29, 36) 5%, rgb(3, 68, 148) 10%, rgb(3, 68, 148) 90%, rgb(234, 29, 36) 95%);
     flex-direction: column;
     align-items: center;
   }
@@ -245,7 +242,7 @@ body {
 /* Pages */
 /* Index */
 .seccion-principal {
-  background-image: url(../../imgs/puerta-local.jpeg);
+  background-image: url(../../imgs/puerta-local.png);
   height: 100vh;
   background-position: center;
   background-repeat: no-repeat;
@@ -378,7 +375,7 @@ body {
   }
 }
 /* MÓVIL */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
   /* index */
   .index-seccion-2 {
     padding: 2vh 0;
@@ -406,10 +403,9 @@ body {
 }
 
 /* MOVIL */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
   /* PRODUCTOS */
-  .productos-frase-productos {
-    margin: 5vh 5vh 5vh 5vh;
+  .productos-card {
     background: rgb(255, 235, 136);
     background: linear-gradient(180deg, rgb(255, 235, 136) 0%, rgb(255, 255, 255) 40%);
   }
@@ -434,10 +430,13 @@ body {
   list-style-type: circle;
 }
 
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 768px) {
   /* SERVICIO */
+  .card {
+    margin: 1vh 1vh;
+  }
   .card-group {
-    margin: 5vh 3vh;
+    margin: 1vh 0;
   }
 }
 /* *Sobre Nosotros */
