--- a/styles/scss/layout/_grid.scss
+++ b/styles/scss/layout/_grid.scss
@@ -29,7 +29,7 @@
 
 .asides {
     background: rgb(234, 29, 36);
-    background: linear-gradient(0deg, rgba(234, 29, 36, 1) 30%, rgba(3, 68, 148, 1) 70%);
+    background: linear-gradient(180deg, rgba(3, 68, 148, 1) 20%, rgba(234, 29, 36, 1) 50%, rgba(3, 68, 148, 1) 80%);
     z-index: 10;
 }
 
@@ -38,7 +38,7 @@
 }
 
 /* Móvil */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
 
     .asides {
         display: none;
