--- a/styles/scss/pages/_productos.scss
+++ b/styles/scss/pages/_productos.scss
@@ -15,11 +15,10 @@
 }
 
 /* MOVIL */
-@media screen and (max-width: 425px) {
+@media screen and (max-width: 576px) {
 
     /* PRODUCTOS */
-    .productos-frase-productos {
-        margin: 5vh 5vh 5vh 5vh;
+    .productos-card {
         background: rgb(255, 235, 136);
         background: linear-gradient(180deg, rgba(255, 235, 136, 1) 0%, rgba(255, 255, 255, 1) 40%);
     }
